[package]
name = "test-api"
version = "0.1.0"
authors = ["KurozeroPB <root@kurozeropb.info>"]

[[bin]]
name = "test-api"
path = "src/main.rs"

[dependencies]
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", default-features = false, features = ["tera_templates"] }
rocket_codegen = "0.4.0"
mongodb = "0.3.12"
serde = "1.0.87"
serde_derive = "1.0.87"
bson = "0.13.0"
tera = "0.10"